--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
 }
 
 apply plugin: 'java'
-apply plugin: 'eclipse'
+apply plugin: 'application'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
@@ -21,6 +21,8 @@ bootJar {
 repositories {
     mavenCentral()
 }
+
+mainClassName = 'hello.ConsumerDemo'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
